# DOA-OpenMP

./: CMakeLists.txt  README.md  main.cpp
